[gd_scene load_steps=21 format=3 uid="uid://chk3bcl33jjts"]

[ext_resource type="Script" path="res://scenes/common/drone.gd" id="1_31u16"]
[ext_resource type="Texture2D" uid="uid://bwkl20ks2fhy1" path="res://assets/graphics/NanodroneBody.png" id="2_2kgip"]
[ext_resource type="Texture2D" uid="uid://b1lqtlixbkpx0" path="res://assets/graphics/NanodronePropellerLeft.png" id="3_mft0f"]
[ext_resource type="Texture2D" uid="uid://5hagqv34b4id" path="res://assets/graphics/light.webp" id="4_e5125"]
[ext_resource type="Texture2D" uid="uid://bpxekkn1lfioq" path="res://assets/graphics/NanodronePropellerRight.png" id="4_j3cux"]
[ext_resource type="AudioStream" uid="uid://b5dml4tj507xy" path="res://assets/propeller_loop.wav" id="5_aqx2b"]
[ext_resource type="Texture2D" uid="uid://btitr2p3s4023" path="res://assets/graphics/blood_drop.png" id="5_sxt70"]
[ext_resource type="AudioStream" uid="uid://ckwfyuc44ewdy" path="res://assets/collision.wav" id="5_yjq35"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_odv1m"]
bounce = 0.3

[sub_resource type="Gradient" id="Gradient_xvgay"]
colors = PackedColorArray(0.52549, 0.12549, 0.117647, 1, 0.777529, 0.217255, 0.201371, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u0tp0"]
gradient = SubResource("Gradient_xvgay")
width = 232

[sub_resource type="Gradient" id="Gradient_u8yxd"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)
metadata/_snap_count = 2

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rws05"]
gradient = SubResource("Gradient_u8yxd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jdd1i"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(100, 1, 0)
direction = Vector3(0, -1, 0)
spread = 40.0
initial_velocity_min = 1000.0
initial_velocity_max = 2500.0
gravity = Vector3(0, 90, 0)
scale_min = 0.3
scale_max = 0.6
color = Color(0.65098, 0.227451, 0.164706, 0.901961)
color_ramp = SubResource("GradientTexture1D_rws05")
color_initial_ramp = SubResource("GradientTexture1D_u0tp0")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31hg6"]
size = Vector2(483.334, 183.333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ka5iv"]
size = Vector2(30.969, 70.8578)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3at2d"]
size = Vector2(48.5101, 5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g1jy6"]
radius = 13.0
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vq2l"]
size = Vector2(11, 20)

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_nfq85"]
length = 6.0
slide_on_slope = true

[node name="Drone" type="RigidBody2D"]
position = Vector2(0, -1)
collision_layer = 8
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_odv1m")
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_31u16")
rotationSpeed = 100
thrust = 280

[node name="Body" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(0, 8)
scale = Vector2(0.06, 0.06)
texture = ExtResource("2_2kgip")

[node name="PropellerLeft" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(-21, -16)
scale = Vector2(0.06, 0.06)
texture = ExtResource("3_mft0f")
region_enabled = true
region_rect = Rect2(-5.72198, -5.19072, 844.16, 77.5327)

[node name="PropellerRight" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(20.59, -15.78)
scale = Vector2(0.06, 0.06)
texture = ExtResource("4_j3cux")
region_enabled = true
region_rect = Rect2(-100.678, -4, 853.678, 74.7131)

[node name="BloodArea" type="Area2D" parent="."]
position = Vector2(20.59, -15.78)
scale = Vector2(0.06, 0.06)

[node name="BloodParticles" type="GPUParticles2D" parent="BloodArea"]
position = Vector2(-2743.18, 246.333)
amount = 200
process_material = SubResource("ParticleProcessMaterial_jdd1i")
texture = ExtResource("5_sxt70")
lifetime = 2.0
explosiveness = 0.1
randomness = 0.36
fixed_fps = 0
draw_order = 0

[node name="CollBloodLeft" type="CollisionShape2D" parent="BloodArea"]
position = Vector2(-984.833, -12)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_31hg6")

[node name="CollBloodRight" type="CollisionShape2D" parent="BloodArea"]
position = Vector2(290.167, -20.3335)
scale = Vector2(13.9925, 2.35213)
shape = SubResource("RectangleShape2D_ka5iv")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -10.4116)

[node name="LandingArea" type="Area2D" parent="."]
position = Vector2(0, 25)
scale = Vector2(0.779016, 1.03319)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LandingArea"]
position = Vector2(0, -12.5824)
shape = SubResource("RectangleShape2D_3at2d")

[node name="PropellerPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_aqx2b")
bus = &"Propeller"

[node name="CollisionPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yjq35")

[node name="PointLight2DInner" type="PointLight2D" parent="."]
position = Vector2(0, 2)
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 3.2
texture = ExtResource("4_e5125")
texture_scale = 6.12

[node name="PointLight2DOuter" type="PointLight2D" parent="."]
visibility_layer = 0
position = Vector2(0, 2)
energy = 5.0
range_item_cull_mask = 2
texture = ExtResource("4_e5125")
texture_scale = 2.0

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true

[node name="CollisionShapeBody" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_g1jy6")
debug_color = Color(0.811765, 0.219608, 0.847059, 0.0745098)

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="."]
position = Vector2(-18, -7)
shape = SubResource("RectangleShape2D_3vq2l")
debug_color = Color(0.811765, 0.219608, 0.847059, 0.0745098)

[node name="CollisionShapeRight" type="CollisionShape2D" parent="."]
position = Vector2(18, -6)
shape = SubResource("RectangleShape2D_3vq2l")
debug_color = Color(0.811765, 0.219608, 0.847059, 0.0745098)

[node name="SeparationShapeLeft" type="CollisionShape2D" parent="."]
position = Vector2(-24, -16)
rotation = 1.57079
shape = SubResource("SeparationRayShape2D_nfq85")

[node name="SeparationShapeRight" type="CollisionShape2D" parent="."]
position = Vector2(24, -16)
rotation = 4.71238
shape = SubResource("SeparationRayShape2D_nfq85")

[connection signal="body_entered" from="." to="." method="_on_collision"]
[connection signal="body_shape_entered" from="BloodArea" to="." method="_on_blood_area_body_shape_entered"]
[connection signal="body_shape_exited" from="BloodArea" to="." method="_on_blood_area_body_shape_exited"]
[connection signal="body_entered" from="LandingArea" to="." method="_on_landing_area_body_entered"]
[connection signal="body_exited" from="LandingArea" to="." method="_on_landing_area_body_exited"]
